--- a/index.css
+++ b/index.css
@@ -1,13 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 *{
-    font-family: 'Poppins', sans-serif;}
-.images{
-    position: relative;
-    top: -31pc;
-    left: 74pc;
-
+    font-family: 'Poppins', sans-serif;
 }
+
+
 .images #nmrdaLogo{
     border-radius: 50%;
 }
@@ -19,11 +16,11 @@
     font-weight: 800;
     text-shadow: -2px 8px 7px black;
 }
-#btn-lg{
+/* #btn-lg{
     display: block;
     position: relative;
     bottom: 18pc;
-}
+} */
 #navbarSupportedContent{
     margin-left: 200px;
 }
